Update pyproject dependencies
- Tensorflow changed to force a tensorflow version with tensorflow_io_gcs_filesystem (a dependency of tf) below equal to version 0.31.0, which is the last version where wheels for Windows were available.
- Pin Python version to 3.11, as tensorflow fails to install on 3.12 on windows due to tensorflow_io_gcs_filesystem.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "cellzarr"
 version = "0.1.0"
-description = "Add your description here"
+description = " CellZarr is a reproducible workflow for high-content analysis of live-cell timelapse imaging, processing raw ND2 files to quantitative features for scalable biological analysis. "
 readme = "README.md"
-requires-python = ">=3.11, <=3.12"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "pandas",
     "scipy",
@@ -36,6 +36,7 @@ colony_seg = [
 stardist_seg = [
     "stardist",
     "csbdeep",
-    "tensorflow-cpu",
+    "tensorflow",
+    "tensorflow_io_gcs_filesystem <= 0.31.0",
     "numpy < 2.0.0"
     ]
